--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
        <div class="price-card">
         <h1 class="price-card__title">
-          Basic         
+          Business         
         </h1>
         <div class="price-card__price">299€</div>
         <span class="price-card__description">
