--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
        <div class="price-card">
         <h1 class="price-card__title">
-          Business         
+         Webshop         
         </h1>
         <div class="price-card__price">299€</div>
         <span class="price-card__description">
@@ -55,7 +55,7 @@
           <li class="price-card__options-list-item">Theme customized</li>
           <li class="price-card__options-list-item">Help and guidance</li>
           <li class="price-card__options-list-item">System introduction</li>
-          <li class="price-card__options-list-item">2 weeks free support</li>
+          <li class="price-card__options-list-item">1 mouth free support</li>
         </ul>
         <button class="price-card__button">Order now</button>
       </div>
@@ -74,7 +74,7 @@
           <li class="price-card__options-list-item">Theme customized</li>
           <li class="price-card__options-list-item">Help and guidance</li>
           <li class="price-card__options-list-item">System introduction</li>
-          <li class="price-card__options-list-item">2 weeks free support</li>
+          <li class="price-card__options-list-item">1 mouth free support</li>
         </ul>
         <button class="price-card__button">Order now</button>
       </div>
