--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
        <div class="price-card">
         <h1 class="price-card__title">
-          Basic         
+         Webshop         
         </h1>
         <div class="price-card__price">599€</div>
         <span class="price-card__description">
