--- a/index.html
+++ b/index.html
@@ -19,65 +19,63 @@
     />
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body class="page">
-    <div class="container">
-      <div class="price-card">
-        <h1 class="price-card__title">
-          Basic         
-        </h1>
-        <div class="price-card__price">99€</div>
-        <span class="price-card__description">
+  <body>
+    <main class="container">
+      <section class="price-card">
+        <h2 class="price-card__title">Basic</h2>
+        <h3 class="price-card__subtitle">Website</h3>
+        <div class="price-card__price price-card__price-green">99€</div>
+        <p class="price-card__description">
           Advanced website made in the world's most popular CMS system,
           Wordpress.
-        </span>
+        </p>
         <ul class="price-card__options-list">
-          <li class="price-card__options-list-item">Website in WordPress</li>
-          <li class="price-card__options-list-item">3 sub pages</li>
-          <li class="price-card__options-list-item">Theme customized</li>
-          <li class="price-card__options-list-item">Help and guidance</li>
-          <li class="price-card__options-list-item">System introduction</li>
-          <li class="price-card__options-list-item">2 weeks free support</li>
+          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-green" ></i> Website in WordPress</li>
+          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-green"></i>3 sub pages</li>
+          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-green"></i>Theme customized</li>
+          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-green"></i>Help and guidance</li>
+          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-green"></i>System introduction</li>
+          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-green"></i>2 weeks free support</li>
         </ul>
-        <button class="price-card__button">Order now</button>
-      </div>
-       <div class="price-card">
-        <h1 class="price-card__title">
-         Webshop         
-        </h1>
-        <div class="price-card__price">299€</div>
-        <span class="price-card__description">
+        <button class="button price-card__button-green">Order now</button>
+      </section>
+       <section class="price-card">
+        <span class="price-card__ribbon">Popular</span>
+        <h2 class="price-card__title">Webshop</h2>
+        <h3 class="price-card__subtitle">Website</h3>
+        <div class="price-card__price price-card__price-blue">299€</div>
+        <p class="price-card__description">
           Advanced website made in the world's most popular CMS system,
           Wordpress.
-        </span>
+        </p>
         <ul class="price-card__options-list">
-          <li class="price-card__options-list-item">Website in WordPress</li>
-          <li class="price-card__options-list-item">3 sub pages</li>
-          <li class="price-card__options-list-item">Theme customized</li>
-          <li class="price-card__options-list-item">Help and guidance</li>
-          <li class="price-card__options-list-item">System introduction</li>
-          <li class="price-card__options-list-item">1 mouth free support</li>
+          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-blue"></i>Website in WordPress</li>
+          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-blue"></i>3 sub pages</li>
+          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-blue"></i>Theme customized</li>
+          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-blue"></i>Help and guidance</li>
+          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-blue"></i>System introduction</li>
+          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-blue"></i>1 mouth free support</li>
         </ul>
-        <button class="price-card__button">Order now</button>
-      </div>
-       <div class="price-card">
-        <h1 class="price-card__title">
-         Webshop         
-        </h1>
-        <div class="price-card__price">599€</div>
-        <span class="price-card__description">
+        <button class="button price-card__button-blue">Order now</button>
+      </section>
+       <section class="price-card">
+        <h2 class="price-card__title">Webshop</h2>
+        <h3 class="price-card__subtitle">Website</h3>
+        <div class="price-card__price price-card__price-orange">599€</div>
+        <p class="price-card__description">
           Advanced website made in the world's most popular CMS system,
           Wordpress.
-        </span>
+        </p>
         <ul class="price-card__options-list">
-          <li class="price-card__options-list-item">Website in WordPress</li>
-          <li class="price-card__options-list-item">3 sub pages</li>
-          <li class="price-card__options-list-item">Theme customized</li>
-          <li class="price-card__options-list-item">Help and guidance</li>
-          <li class="price-card__options-list-item">System introduction</li>
-          <li class="price-card__options-list-item">1 mouth free support</li>
+          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-orange"></i>Website in WordPress</li>
+          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-orange"></i>3 sub pages</li>
+          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-orange"></i>Theme customized</li>
+          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-orange"></i>Help and guidance</li>
+          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-orange"></i>System introduction</li>
+          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-orange"></i>1 mouth free support</li>
         </ul>
-        <button class="price-card__button">Order now</button>
-      </div>
-    </div>
+        <button class="button price-card__button-orange">Order now</button>
+      </section>
+    </main>
   </body>
 </html>
