--- a/index.html
+++ b/index.html
@@ -1,81 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>price card</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <main class="container">
-      <section class="price-card">
-        <h2 class="price-card__title">Basic</h2>
-        <h3 class="price-card__subtitle">Website</h3>
-        <div class="price-card__price price-card__price-green">99€</div>
-        <p class="price-card__description">
-          Advanced website made in the world's most popular CMS system,
-          Wordpress.
-        </p>
-        <ul class="price-card__options-list">
-          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-green" ></i> Website in WordPress</li>
-          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-green"></i>3 sub pages</li>
-          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-green"></i>Theme customized</li>
-          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-green"></i>Help and guidance</li>
-          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-green"></i>System introduction</li>
-          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-green"></i>2 weeks free support</li>
-        </ul>
-        <button class="button price-card__button-green">Order now</button>
-      </section>
-       <section class="price-card">
-        <span class="price-card__ribbon">Popular</span>
-        <h2 class="price-card__title">Webshop</h2>
-        <h3 class="price-card__subtitle">Website</h3>
-        <div class="price-card__price price-card__price-blue">299€</div>
-        <p class="price-card__description">
-          Advanced website made in the world's most popular CMS system,
-          Wordpress.
-        </p>
-        <ul class="price-card__options-list">
-          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-blue"></i>Website in WordPress</li>
-          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-blue"></i>3 sub pages</li>
-          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-blue"></i>Theme customized</li>
-          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-blue"></i>Help and guidance</li>
-          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-blue"></i>System introduction</li>
-          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-blue"></i>1 mouth free support</li>
-        </ul>
-        <button class="button price-card__button-blue">Order now</button>
-      </section>
-       <section class="price-card">
-        <h2 class="price-card__title">Webshop</h2>
-        <h3 class="price-card__subtitle">Website</h3>
-        <div class="price-card__price price-card__price-orange">599€</div>
-        <p class="price-card__description">
-          Advanced website made in the world's most popular CMS system,
-          Wordpress.
-        </p>
-        <ul class="price-card__options-list">
-          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-orange"></i>Website in WordPress</li>
-          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-orange"></i>3 sub pages</li>
-          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-orange"></i>Theme customized</li>
-          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-orange"></i>Help and guidance</li>
-          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-orange"></i>System introduction</li>
-          <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-orange"></i>1 mouth free support</li>
-        </ul>
-        <button class="button price-card__button-orange">Order now</button>
-      </section>
-    </main>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>price card</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <main class="container">
+    <section class="price-card">
+      <h2 class="price-card__title">Basic</h2>
+      <h3 class="price-card__subtitle">Website</h3>
+      <div class="price-card__price price-card__price-basic">99€</div>
+      <p class="price-card__description">
+        Advanced website made in the world's most popular CMS system,
+        Wordpress.
+      </p>
+      <ul class="price-card__options-list">
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-basic"></i> Website in
+          WordPress</li>
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-basic"></i>3 sub pages
+        </li>
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-basic"></i>Theme
+          customized</li>
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-basic"></i>Help and
+          guidance</li>
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-basic"></i>System
+          introduction</li>
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-basic"></i>2 weeks free
+          support</li>
+      </ul>
+      <button class="button price-card__button-basic">Order now</button>
+    </section>
+    <section class="price-card">
+      <span class="price-card__ribbon">Popular</span>
+      <h2 class="price-card__title">Business</h2>
+      <h3 class="price-card__subtitle">Website</h3>
+      <div class="price-card__price price-card__price-business">299€</div>
+      <p class="price-card__description">
+        Advanced website made in the world's most popular CMS system,
+        Wordpress.
+      </p>
+      <ul class="price-card__options-list">
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-business"></i>Website in
+          WordPress</li>
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-business"></i>3 sub pages
+        </li>
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-business"></i>Theme
+          customized
+        </li>
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-business"></i>Help and
+          guidance</li>
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-business"></i>System
+          introduction</li>
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-business"></i>1 mouth free
+          support</li>
+      </ul>
+      <button class="button price-card__button-business">Order now</button>
+    </section>
+    <section class="price-card">
+      <h2 class="price-card__title">Webshop</h2>
+      <h3 class="price-card__subtitle">Website</h3>
+      <div class="price-card__price price-card__price-webshop">599€</div>
+      <p class="price-card__description">
+        Advanced website made in the world's most popular CMS system,
+        Wordpress.
+      </p>
+      <ul class="price-card__options-list">
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-webshop"></i>Website in
+          WordPress</li>
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-webshop"></i>3 sub pages
+        </li>
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-webshop"></i>Theme
+          customized</li>
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-webshop"></i>Help and
+          guidance</li>
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-webshop"></i>System
+          introduction</li>
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-webshop"></i>1 mouth free
+          support</li>
+      </ul>
+      <button class="button price-card__button-webshop">Order now</button>
+    </section>
+  </main>
+</body>
+
 </html>
