--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       <h3 class="price-card__subtitle">Website</h3>
       <div class="price-card__price price-card__price-basic">99€</div>
       <p class="price-card__description">
-        Advanced website made in the world's most popular CMS system,
-        Wordpress.
+        Simple website made in the world's most popular CMS system, Wordpress.
       </p>
       <ul class="price-card__options-list">
         <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-basic"></i> Website in
@@ -52,7 +51,7 @@
       <ul class="price-card__options-list">
         <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-business"></i>Website in
           WordPress</li>
-        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-business"></i>3 sub pages
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-business"></i>3-5 sub pages
         </li>
         <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-business"></i>Theme
           customized
@@ -71,13 +70,12 @@
       <h3 class="price-card__subtitle">Website</h3>
       <div class="price-card__price price-card__price-webshop">599€</div>
       <p class="price-card__description">
-        Advanced website made in the world's most popular CMS system,
-        Wordpress.
+        Your very own webshop made the world's most popular CMS system, Wordpress.
       </p>
       <ul class="price-card__options-list">
-        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-webshop"></i>Website in
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-webshop"></i>Webshop in
           WordPress</li>
-        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-webshop"></i>3 sub pages
+        <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-webshop"></i>3-5 sub pages
         </li>
         <li class="price-card__options-list-item"><i class="price-card__icon price-card__icon-webshop"></i>Theme
           customized</li>
